button alignment resolved on mobile

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -542,7 +542,7 @@
   .results-list-container {
     margin: 5px;
     border-radius: 25px;
-    padding: 10px 15px;
+    padding: 10px 12px;
   }
   .results-list-logo {
     width: 50px;
@@ -560,13 +560,19 @@
     margin: 0;
     padding-top: 10px;
   }
+  .results-button-container {
+    display: flex;
+    justify-content: left;
+    margin-top: 12px;
+  }
   .results-list-button {
     width: auto;
     height: 33px;
     font-weight: bold;
     font-size: 16px;
     letter-spacing: 0.36px;
-    margin: 5px 10px 5px 0px;
+    margin-right: 10px;
+    
   }
   .results-list-sub-title {
     font-size: 12px;
